# Version 0.9.4

* DEPRECATION: Use :success and :failure as flash messages instead :notice and :error

# Version 0.9

* Allow dual blocks in destroy;
* Added :if and :unless to has_scope (thanks to Jack Danger);
* Added create_resource, update_resource and delete_resource hooks (thanks to Carlos Antonio da Silva);
* Backported ActionController::Responder from Rails 3;
* Added parent_url helper;
* Added association_chain helper (as suggested by http://github.com/emmanuel);

# Version 0.8

* Fixed a small bug on optional belongs to with namespaced controllers.
* Allow a parameter to be given to collection_url in polymorphic cases to replace
  the parent.
* Allow InheritedResources to be called without inheritance.
* Ensure that controllers that inherit from a controller with InheritedResources
  works properly.

# Version 0.7

* Allow procs as default value in has scope to be able to use values from session, for example.
* Allow blocks with arity 0 or -1 to be given as the redirect url:

    def destroy
      destroy!{ project_url(@project) }
    end

* Allow interpolation_options to be set in the application controller.
* Added has_scope to controller (an interface for named_scopes).
* Added polymorphic_belongs_to, optional_belongs_to and singleton_belongs_to
  as quick methods.
* Only load belongs_to, singleton and polymorphic helpers if they are actually
  required. base_helpers, class_methods, dumb_responder and url_helpers are loaded
  when you inherited from base for the first time.

# Version 0.6

* Ensure that the default template is not rendered if the default_template_format
  is not accepted. This is somehow related with the security breach report:

  http://www.rorsecurity.info/journal/2009/4/24/hidden-actions-render-templates.html

  IR forbids based on mime types. For example: respond_to :html, :except => :index
  ensures that the index.html.erb view is not rendered, making your IR controllers
  safer.
